정적분석 테스트 통과
1. import static 은 import 문보다 앞서야 한다.
2. spring-boot 라이브러리도 import 순서가 있군..
3. Integer 객체를 만들때 Integer.valueOf() 메소드를 이용해서 만들어야함